tests/invalid/Native_Invalid_1.whiley
// This method is an error because can only ever have one export
// method with a given name.

native int f(int x):

native int f([int] x):
